# fastapi-demo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.db
app/: app.py  database.py  images.py  schemas.py
examples/: FirstApp.py  Requestbody.py  WhatIsSchema.py  annotatedtypig.py  pydanticdemo.py
